# p_rob

./: README.md
p_rob_description/: CMakeLists.txt  package.xml
p_rob_description/meshes/: gripper.STL  link12.STL  link23.STL  link34.STL  link45.STL  link56.STL  link6G.STL
p_rob_description/urdf/: p_rob.gazebo.xacro  p_rob.transmission.xacro  p_rob.urdf  p_rob.urdf.xacro
